# surfsense-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
surfsense_mcp/: __init__.py  __main__.py  client.py  server.py
surfsense_mcp/auth/: __init__.py  surfsense_header_auth_provider.py
surfsense_mcp/tools/: __init__.py  documents.py  logs.py  notes.py  reports.py  search_spaces.py  threads.py
tests/: conftest.py  test_tools.py
